# Software-Engineering-ui

./: .gitignore  .gitmodules  1.txt  CMakeLists.txt  CMakePresets.json  build-windows.bat  build-windows.ps1  coverage.info  coverage_filtered.info  extracted_files.txt  qt-try_en.qm  qt-try_en.ts  script.sh  task.md  一、 终极元凶：跨线程访问 SQLite 数据库（极易崩溃） - Copy.md
.run/: qt-try (Debug).run.xml  qt-try (Release).run.xml
coverage_html/: cmd_line
cross-compile/: Dockerfile  Dockerfile.qt6  README.md  build-image.sh  build-mingw-qt6.sh  build-mxe-image.sh  build-mxe-qt6.sh  build-qt6-image.sh  build-windows-local.sh  build-windows-native.sh  build-windows-nodocker.sh  build-windows.sh  build-with-mxe-shared.sh  build-with-mxe.sh  install-mxe-qt6-shared.sh  setup-cross-build.sh  setup-mingw.sh
cross-compile/cmake/: mxe-toolchain.cmake  win-toolchain.cmake
docker-build/: .dockerignore  Dockerfile  Dockerfile.debian-bullseye  Dockerfile.final  Dockerfile.qt  Dockerfile.qt-official  Dockerfile.simple  Dockerfile.ubuntu-qt6  README_老师专用.md  docker-compose.debian-bullseye.yml  docker-compose.qt-official.yml  docker-compose.simple.yml  docker-compose.ubuntu-qt6.yml  docker-compose.yml  run.bat  run.sh  test_cases.txt
docs/: 1.md  SE.md  UI模块测试.md  docs.md  docs.md.backup  last_docs.md  migrate.md  migrate_suse.md  modify.md  need_add.docx  need_add.md  script.md  total_doc.md  useful-folders.md  交作业指南.md  测试覆盖率分析报告.md  第3章 需求分析.md  第3章-需求分析-mermaid.md  第4章 系统设计.md  第5章 编码实现.md  答辩准备清单.md  项目演示视频讲稿.md
docs/coverage_html/: coverage.json  index.html
docs/coverage_html/src/core/: batchprocessor.cpp.html  index.html  inferenceengine.cpp.html  inferenceworker.cpp.html
docs/coverage_html/src/data/: databasemanager.cpp.html  datamodel.cpp.html  index.html
docs/coverage_html/src/ui/: batchprocessdialog.cpp.html  extractionpanel.cpp.html  graphwidget.cpp.html  historypanel.cpp.html  index.html  mainwindow.cpp.html  resulttreewidget.cpp.html  settingsdialog.cpp.html
docs/coverage_html/src/utils/: appconstants.cpp.html  configmanager.cpp.html  index.html  logger.cpp.html  stylemanager.cpp.html
include/optikg/: datamodel.h
model/: metadata.json
models/: metadata.json
resources/: resources.qrc
resources/styles/: FONTS.md  README.md  material_dark.qss  material_light.qss  modern_dark_pro.qss  modern_dark_pro.qss.backup  modern_light.qss  modern_pro.qss  modern_pro.qss.backup  warm_beige.qss
scripts/: build-appimage.sh  build-image.sh  build.sh  cals.sh  coverage.sh  run.sh  run_tests.sh  script.sh  test.sh
source-code.4/source-code/: .dockerignore  Dockerfile  build.sh  run.sh
source-code.4/source-code/include/optikg/: datamodel.h
source-code.4/source-code/resources/: optikg.desktop  resources.qrc
source-code.4/source-code/src/: main.cpp
source-code.4/source-code/src/core/: batchprocessor.cpp  batchprocessor.h  inferenceengine.cpp
source-code.4/source-code/src/data/: databasemanager.cpp
source-code.4/source-code/src/ui/: extractionpanel.cpp  extractionpanel.h  graphwidget.h  mainwindow.cpp  resulttreewidget.cpp  settingsdialog.h
source-code.4/source-code/src/utils/: appconstants.cpp  configmanager.cpp  configmanager.h  stylemanager.cpp  stylemanager.h
source-code.4/source-code/test_file/: evalSmall.json
source-code.4/source-code/tests/: CMakeLists.txt  test_appconstants.cpp  test_batchprocessdialog.cpp  test_configmanager.cpp  test_databasemanager.cpp  test_datamodel.cpp  test_inferenceengine.cpp  test_inferenceworker.cpp  test_mainwindow.cpp  test_performance.cpp  test_resulttreewidget.cpp  test_settingsdialog.cpp  test_stylemanager.cpp
src/: main.cpp  task.md
src/core/: batchprocessor.cpp  batchprocessor.h  inferenceengine.cpp  inferenceengine.h  inferenceworker.cpp  inferenceworker.h
src/data/: databasemanager.cpp  databasemanager.h  datamodel.cpp
src/ui/: batchprocessdialog.cpp  batchprocessdialog.h  graphwidget.cpp  graphwidget.h  historypanel.cpp  historypanel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resulttreewidget.h  settingsdialog.cpp
src/utils/: appconstants.cpp  appconstants.h  configmanager.cpp  logger.cpp  logger.h  stylemanager.cpp
test/: SimpleText.txt
tests/: CMakeLists.txt  test_appconstants.cpp  test_batchprocessdialog.cpp  test_batchprocessor.cpp  test_configmanager.cpp  test_databasemanager.cpp  test_datamodel.cpp  test_extractionpanel.cpp  test_graphwidget.cpp  test_historypanel.cpp  test_inferenceengine.cpp  test_inferenceworker.cpp  test_logger.cpp  test_mainwindow.cpp  test_reliability.cpp  test_resulttreewidget.cpp  test_settingsdialog.cpp  test_stylemanager.cpp
